# linking-device-sdk-release

./: README.md
include/: qnlinking.h
sample/: CMakeLists.txt  P2PLive.c  Readme  log.c  log_local.h
sample/device/common/: ipc.c  ipc.h
sample/device/simulator/: sim_ipc.c
